--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -48,6 +48,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8b2daa2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "```python \n",
+    "file ='data/TSLA.csv'\n",
+    "\n",
+    "df = pd.read_csv(file, decimal = \".\")\n",
+    "\n",
+    "df = df[['Date', 'Close']]\n",
+    "\n",
+    "df['Date'] = pd.to_datetime(df['Date'], format = '%Y-%m-%d')\n",
+    "\n",
+    "df = df[(df['Date'].dt.year >= 2011) & (df['Date'].dt.year <= 2022)]\n",
+    "\n",
+    "df['ln_Returns'] = (np.log(df['Close']) - np.log(df['Close'].shift(1))) * 100\n",
+    "\n",
+    "df_avg = df['ln_Returns'].groupby(df['Date'].dt.year).mean()\n",
+    "\n",
+    "df_avg = pd.DataFrame(df_avg).reset_index()\n",
+    "\n",
+    "df_avg.head()\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "00311d99",
